package Model;

public class Asesores extends Empleado{

    public Asesores(String name, int id, Tarea tareas) {
        super(name, id, tareas);
        //TODO Auto-generated constructor stub
    }

    @Override
    public void atender(){}
    
}
