package Model;

public class Cajero extends Empleado {

    public Cajero(String name, int id, Tarea tareas) {
        super(name, id, tareas);
        //TODO Auto-generated constructor stub
    }
    @Override
    public void atender(){}
    
}
