package Model;

public class Gerente extends Empleado{

    public Gerente(String name, int id, Tarea tareas) {
        super(name, id, tareas);
        //TODO Auto-generated constructor stub
    }
    @Override
    public void atender(){}
}
